@startuml
' Bounded Context: payments
' Compact view: aggregates, services, repositories, controllers.
' Individual commands/queries/resources/assemblers are omitted for readability.

left to right direction
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 50
skinparam shadowing false
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor White
  ArrowColor #444444
  BorderColor #333333
}

package "domain.model.aggregates" {
  class Payment {
    +Amount amount
    +PaymentStatus status
    +UserId userId
  }

  class Subscription {
    +PlanType planType
    +SubscriptionPeriod period
    +SubscriptionStatus status
    +UserId userId
  }
}

package "domain.model.events" {
  class PaymentFailedEvent
  class PaymentSucceededEvent
  class SubscriptionCanceledEvent
  class SubscriptionCreatedEvent
}

package "domain.services" {
  interface PaymentCommandService
  interface PaymentQueryService
  interface SubscriptionCommandService
  interface SubscriptionQueryService
}

package "application (command/query services)" {
  class PaymentCommandServiceImpl
  class PaymentQueryServiceImpl
  class SubscriptionCommandServiceImpl
  class SubscriptionQueryServiceImpl
}

package "application.internal.outboundservices.acl" {
  class ExternalIamService
}

package "infrastructure.persistence.jpa.repositories" {
  interface PaymentRepository
  interface SubscriptionRepository
}

package "infrastructure.persistence.stripe" {
  interface StripeService
  class StripeServiceImpl
  class StripeWebhookHandler
}

package "interfaces.rest" {
  class PaymentsController
  class SubscriptionPaymentsController
  class UserSubscriptionsController
}

' Repositories manage aggregates
PaymentRepository --> Payment
SubscriptionRepository --> Subscription

' Service implementations
PaymentCommandService <|.. PaymentCommandServiceImpl
PaymentQueryService   <|.. PaymentQueryServiceImpl
SubscriptionCommandService <|.. SubscriptionCommandServiceImpl
SubscriptionQueryService   <|.. SubscriptionQueryServiceImpl

' Command / query services use repositories and outbound services
PaymentCommandServiceImpl --> PaymentRepository
PaymentCommandServiceImpl --> StripeService
PaymentQueryServiceImpl   --> PaymentRepository

SubscriptionCommandServiceImpl --> SubscriptionRepository
SubscriptionCommandServiceImpl --> ExternalIamService
SubscriptionQueryServiceImpl   --> SubscriptionRepository

' Stripe infrastructure
StripeService <|.. StripeServiceImpl
StripeWebhookHandler --> StripeService
StripeWebhookHandler --> PaymentCommandServiceImpl
StripeWebhookHandler --> SubscriptionCommandServiceImpl

' Events emitted from aggregates / services
PaymentFailedEvent --> Payment
PaymentSucceededEvent --> Payment
SubscriptionCreatedEvent --> Subscription
SubscriptionCanceledEvent --> Subscription

' Controllers use services
PaymentsController --> PaymentCommandService
PaymentsController --> PaymentQueryService

SubscriptionPaymentsController --> SubscriptionCommandService
SubscriptionPaymentsController --> SubscriptionQueryService

UserSubscriptionsController --> SubscriptionQueryService

@enduml